--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,8 @@ html, body {
   margin: 0;
   padding: 0;
   background: #000;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 /* Safe area per notch/barre */
