--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,20 @@ html, body {
   margin: 0;
   padding: 0;
   background: #000;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  overflow: hidden;
+}
+
+/* Permetti scroll su mobile/tablet */
+@media (max-width: 1024px) {
+  html, body {
+    position: relative;
+    overflow-y: auto;
+    height: auto;
+    min-height: 100vh;
+  }
 }
 
 /* Safe area per notch/barre */
@@ -29,6 +41,19 @@ html, body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+/* Forza landscape anche quando il telefono è in portrait */
+@media screen and (orientation: portrait) {
+  body {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    height: 100vw;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
 }
 
 #root {
